# esp32-lvgl-8.3.6

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/lvgl/: lv_conf.h
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/ui/: CMakeLists.txt  component.mk  library.properties  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/components/: ui_comp_hook.c
components/ui/screens/: ui_Screen1.c
main/: CMakeLists.txt  idf_component.yml  vehicle_lvgl.c
